--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "less":"^2.7.1",
+    "less-loader":"^2.2.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "expose-loader": "^0.7.1",
